# django.admin.geomap

./: .coveragerc  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_ru.md  READMEru.md  deploy.txt  makefile  manage.py  pytest.ini  pytest4.ini  pytest5.ini  setup.cfg
.github/workflows/: django3.yml  django4.yml  django5.yml  pep257.yml  tests.yml
django_admin_geomap/: __init__.py
django_admin_geomap/templates/geomap/: add_form.html  change_form.html  changelist.html  common.html
django_admin_geomap/templates/geomap/osm/: add.html  base.html  drag.html  popup.html
example/: admin.py  example_home.html  models.py  settings.py  urls.py  views.py  wsgi.py
example/templates/: example_home.html
tests/: conftest.py  django3.txt  django4.txt  django5.txt  requirements.txt
tests/test/: __init__.py  test_geoitem.py  test_urls.py
