[metadata]
name = django_admin_geomap
version = 1.0
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Displaying objects at the maps in the Django administration site.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/django.admin.geomap
project_urls =
    Bug Tracker = https://github.com/vb64/django.admin.geomap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = django_admin_geomap
python_requires = >=3.6
include_package_data=True
